0033377: Data Exchange - STEPCAFControl_Reader crash in OCC 7.7.0

Added checking for null object for STEPCAFControl_Reader::SettleShapeData